<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bookmarks_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bookmarks.BookmarksFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_movie_list" />

    <include
        android:id="@+id/search_no_item"
        android:visibility="gone"
        layout="@layout/no_item_search"/>

</FrameLayout>