<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cinemas_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movieList.MovieListViewModel">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_cinema_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_movie_list" />

    <include
        android:id="@+id/cinemas_no_item"
        android:visibility="gone"
        layout="@layout/no_item_cinemas"/>

    <include
        android:id="@+id/pb_loading_indicator"
        android:visibility="gone"
        layout="@layout/no_item_loading_indicator"/>

</FrameLayout>