...
            android:layout_height="@dimen/image_poster_height"
            android:contentDescription="@string/desc_movies_poster"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/movie_list_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_movies_bookmark"
            android:src="@drawable/ic_bookmark_poster"
            app:layout_constraintStart_toStartOf="@id/movie_list_img"
            app:layout_constraintTop_toTopOf="@id/movie_list_img" />
...
